@@ -21,6 +21,7 @@ from libqtile import hook
 
 from qtile_extras.layout.decorations.borders import (  # noqa: F401
     ConditionalBorder,
+    CustomBorder,
     GradientBorder,
     GradientFrame,
     ScreenGradientBorder,
